<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/register_header"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"/>

    <EditText
        android:id="@+id/register_ipName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:hint="Enter your name" />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp">
        <RadioButton
            android:id="@+id/register_rbtnMale"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/register_rbtnMale" />

        <RadioButton
            android:id="@+id/register_rbtnFemale"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:text="@string/register_rbtnFemale" />
    </RadioGroup>

    <EditText
        android:id="@+id/register_ipEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:hint="Enter your email" />

    <EditText
        android:id="@+id/register_ipPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:hint="Enter your phone" />

    <EditText
        android:id="@+id/register_ipAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="50dp"
        android:layout_marginVertical="20dp"
        android:hint="Enter your address" />

    <Button
        android:id="@+id/register_btnSave"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="250dp"
        android:text="@string/register_btnSave" />

</LinearLayout>