<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserDetailActivity"
    android:orientation="vertical"
    android:padding="30dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:text="@string/userDetail"
        android:textAlignment="center"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="30dp">

        <TextView
            android:id="@+id/userDetail_tvName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/textview_border"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <RadioButton
                android:id="@+id/userDetail_rbtnMale"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:clickable="false"
                android:text="@string/register_rbtnMale"
                android:textSize="18sp" />

            <RadioButton
                android:id="@+id/userDetail_rbtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="100dp"
                android:clickable="false"
                android:text="@string/register_rbtnFemale"
                android:textSize="18sp" />

        </RadioGroup>

        <TextView
            android:id="@+id/userDetail_tvEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/textview_border"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:padding="0dp">

            <TextView
                android:id="@+id/userDetail_tvPhone"
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="0dp"
                android:background="@drawable/textview_border"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:paddingLeft="10dp"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/userDetail_btnCall"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="30dp"
                android:background="@android:drawable/sym_action_call" />

        </LinearLayout>


        <TextView
            android:id="@+id/userDetail_tvAddress"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/textview_border"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="@android:color/black"
            android:textSize="18sp" />
    </LinearLayout>



    <Button
        android:id="@+id/userDetail_btnBack"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginLeft="230dp"
        android:text="@string/userList_btnBack" />


</LinearLayout>